# personalLibrary

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  personal_knowledge_context_server_design.md  pyproject.toml
.agents/skills/pkcs-ingest/: SKILL.md
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-03-pkcs-mvp-m1-m2/: check.jsonl  codex-cli-mcp-acceptance.md  implement.jsonl  m1-m2-mvp-task-report.md  prd.md  task.json
.trellis/tasks/06-03-pkcs-project-plan/: prd.md  (+1 more)
.trellis/workspace/: index.md
migrations/: env.py
migrations/versions/: 20260604_0001_initial_schema.py  20260604_0002_add_schema_comments.py  20260604_0003_simplify_schema_comments.py  20260604_0004_add_fk_targets_to_comments.py  20260605_0005_split_source_type_codes.py  20260608_0006_internal_source_identity.py  20260609_0007_comment_source_key_prefix_mapping.py  20260610_0008_add_markdown_artifacts.py
src/pkcs/: __init__.py  cli.py  config.py  health.py  source_metadata.py
tests/: conftest.py  test_acceptance.py  test_context_pack.py  test_database_isolation.py  test_database_schema.py  test_health.py  test_ingest.py  test_ingest_normalization.py  test_ingest_trace.py  test_m3_eval.py  test_planned_search.py  test_raw_archive.py  test_reader.py  test_repositories.py  test_search.py  test_search_planning.py
tests/fixtures/: eval_queries.jsonl  m3_diagnostic_queries.jsonl  m3_eval_queries.jsonl
(+151 files in other folders)
