[project]
name = "pkcs"
version = "0.1.0"
description = "Personal Knowledge Context Server MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.115.0",
    "mcp>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.10.0",
    "python-json-logger>=3.3.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
pkcs = "pkcs.cli:app"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkcs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

